--- a/arman.css
+++ b/arman.css
@@ -200,3 +200,9 @@ nav ul li a:hover{
     background-color: black;
     color:white;
 }
+
+/* New dropdown */
+.new-dropdown{
+    margin-left: 30px;
+    margin-top: 40px;
+}
