--- a/arman.css
+++ b/arman.css
@@ -172,6 +172,7 @@ body{
 /* .programming-form > */ label{
     margin-bottom: 5px;
     display: block;
+    text-align:center;
 }
 
 /* header file    */
@@ -205,4 +206,11 @@ nav ul li a:hover{
 .new-dropdown{
     margin-left: 30px;
     margin-top: 40px;
+}
+
+/* fieldset design */
+.fieldset {
+    width:500px;
+    margin-left: 700px;
+    
 }
